[package]
name = "screenshot-stuff"
version = "0.1.0"
authors = ["portablejim <dcseee-github@yahoo.com.au>"]

[dependencies]
time = "*"
image = "*"
imagefmt = { git = "https://github.com/portablejim/imagefmt.git", branch = "better-compression" }
twox-hash = "*"
dxgcap = "0.0.8"
ctrlc = { version = "3.0", features = ["termination"] }
serde = "*"
serde_json = "*"
clap = "*"
oxipng = "*"
png = "*"
threadpool = "*"
rayon = "*"
itertools = "*"
rgb = "*"

[dependencies.imagequant]
#imagequant-sys = {git = "https://github.com/ImageOptim/libimagequant.git", branch = "msvc" }
git = "https://github.com/portablejim/libimagequant-rust.git"
branch = "msvc"
